# Mercury-Engine

./: .gitignore  Cargo.toml  Makefile  README.md
src/: background.rs  collision.rs  desktopplatform.rs  game.rs  gameobject.rs  lib.rs  platform.rs  player.rs  sprite.rs  wasmplatform.rs
src/games/: light_gfx_demo.rs  mod.rs  town_demo.rs
src/mercurygraphics/: mercuryimagebuffer.rs  mod.rs
src/platform/: desktopplatform.rs  mod.rs  wasmplatform.rs
www/: index.html
